<resources>
    <string name="app_name">Opaku</string>

    <string name="title_activity_order_details">Detail Pesanan</string>
    <string name="title_activity_add_address">Tambah Alamat</string>
    <string name="title_activity_address">Alamat Rumah</string>
    <string name="title_activity_bank_account">Pilih Bank</string>
    <string name="title_activity_credit_card">Kartu Kredit</string>
    <string name="title_activity_checkout">Buat Pesanan</string>
    <string name="title_activity_cart">Keranjang</string>
    <string name="title_activity_change_password">Ubah Kata Sandi</string>

    <string name="title_order_info">Informasi Pemesanan</string>

    <string name="button_add_address">Tambah alamat</string>
    <string name="button_select">Pilih</string>
    <string name="button_change_password">Ubah kata sandi</string>
    <string name="button_done">Selesai</string>
    <string name="button_add_to_cart">Tambahkan ke keranjang</string>
    <string name="button_order_now">Buat pesanan</string>
    <string name="button_process_to_checkout">Proses pembayaran</string>
    <string name="button_login">Masuk</string>
    <string name="button_register">Daftar</string>
    <string name="button_change_address">Ubah alamat</string>
    <string name="button_delete">Hapus</string>
    <string name="button_save_change">Simpan perubahan</string>
    <string name="button_add">Tambah</string>

    <string name="hint_input_name">Masukkan nama</string>
    <string name="hint_input_phone_number">Masukkan nomor telepon</string>
    <string name="hint_input_postal_code">Masukkan kode area</string>
    <string name="hint_input_address">Masukkan alamat</string>
    <string name="hint_input_card_holder_name">Masukkan nama pemilik</string>
    <string name="hint_input_card_number">Masukkan nomor kartu</string>
    <string name="hint_input_card_expired">Masukkan waktu berakhir</string>
    <string name="hint_input_cvv">Masukkan cvv</string>
    <string name="hint_confirm_password">Kata sandi lama</string>
    <string name="hint_new_password">Kata sandi baru</string>
    <string name="hint_update_personal_info">Ubah informasi akun</string>
    <string name="hint_input_email_address">Masukkan alamat email</string>
    <string name="hint_input_password">Masukkan kata sandi</string>
    <string name="hint_input_confirm_password">Masukkan konfirmasi kata sandi</string>
    <string name="hint_leave_message">Tinggalkan pesan (opsional)</string>

    <string name="info_order_id">Id pemesanan</string>
    <string name="info_expired_order_time">Batas waktu pembayaran</string>
    <string name="info_bank_holder_name">Nama pemilik</string>
    <string name="info_bank_name">Nama bank</string>
    <string name="info_bank_account_number">No rekening</string>
    <string name="info_expired">Kadaluwarsa</string>
    <string name="info_message_login">Belum memiliki akun?</string>
    <string name="info_message_register">Sudah memiliki akun?</string>
    <string name="info_message_home_address">- Silahkan pilih alamat tujuan anda -</string>
    <string name="info_message_empty">Tidak ada data</string>

    <string name="message_invalid_address_model">Address model tidak valid</string>
    <string name="message_invalid_user">User tidak valid</string>
    <string name="message_invalid_order_model">Order model invalid</string>
    <string name="message_empty_name">Nama tidak boleh kosong</string>
    <string name="message_empty_phone_number">Nomor telepon tidak boleh kosong</string>
    <string name="message_empty_postal_code">Kode area tidak boleh kosong</string>
    <string name="message_empty_address">Alamat tidak boleh kosong</string>
    <string name="message_error_see_data">Gagal melihat data</string>
    <string name="message_invalid_card_name">Nama pemegang kartu tidak boleh kosong</string>
    <string name="message_invalid_card_number">Nomor kartu tidak boleh kosong</string>
    <string name="message_invalid_card_expired">Expired kartu tidak boleh kosong</string>
    <string name="message_invalid_cvv">Cvv tidak boleh kosong</string>
    <string name="message_invalid_password">Kata sandi minimal 6 digit</string>
    <string name="message_invalid_new_password">Kata sandi baru minimal 6 digit</string>
    <string name="message_invalid_password_not_equal">Kata sandi tidak boleh sama</string>
    <string name="message_invalid_empty_email">Email tidak boleh kosong</string>
    <string name="message_invalid_email">Email tidak valid</string>
    <string name="message_success_change_password">Berhasil mengubah password</string>
    <string name="message_error_change_password">Gagal, ada kesalahan update password</string>

    <string name="title_bottom_discover">Produk</string>
    <string name="title_bottom_wishlist">Disukai</string>
    <string name="title_bottom_account">Akun</string>
    <string name="title_bottom_cart">Keranjang</string>
    <string name="title_category_all">Semua</string>
    <string name="message_invalid_product_id">Product id tidak valid</string>
    <string name="title_stock">Stok</string>
    <string name="title_brand">Merk</string>
    <string name="title_material">Bahan</string>
    <string name="title_weight">Berat</string>
    <string name="title_gram">gram</string>
    <string name="message_invalid_get_data">Tidak dapat melihat data</string>
    <string name="info_no_brand">Tidak ada merk</string>
    <string name="info_unknown">Tidak diketahui</string>
    <string name="info_no_desc">Tidak ada deskripsi</string>
    <string name="message_no_stock">Stock habis</string>

    <string name="info_personal">Informasi akun</string>
    <string name="info_desc_personal">Telepon, email, alamat rumah</string>
    <string name="info_password">Kata sandi</string>
    <string name="info_desc_password">Untuk keamanan ubah kata sandi</string>
    <string name="info_orders">Daftar pesanan</string>
    <string name="info_desc_orders">Daftar pesanan kamu</string>
    <string name="info_name">Nama</string>
    <string name="info_email">Email</string>
    <string name="info_phone">Nomor telepon</string>
    <string name="info_address">Alamat</string>
    <string name="info_refund">Refund</string>
    <string name="title_info_order">Info Pemesanan</string>
    <string name="info_customer_id">Customer id</string>
    <string name="info_status">Status</string>
    <string name="info_payment">Pembayaran</string>
    <string name="info_total_weight">Total berat</string>
    <string name="info_total_item">Total item</string>
    <string name="info_created">Dibuat</string>
    <string name="info_item">item</string>
    <string name="info_expired_payment">Batas pembayaran</string>
    <string name="info_detail_produk">Detail produk</string>
    <string name="info_message">Pesan</string>
    <string name="info_sub_product_price">Sub harga produk</string>
    <string name="info_sub_payment_price">Sub biaya pengiriman</string>
    <string name="info_total_price">Total biaya</string>
    <string name="info_success_refund">Diasumsikan refund sudah berhasil</string>
    <string name="info_failed_refund">Refund gagal, silahkan coba kembali</string>
    <string name="title_address">Alamat tujuan</string>
    <string name="title_payment_method">Metode pembayaran</string>
    <string name="message_failed_checkout">Gagal memproses pesanan</string>
    <string name="message_success_checkout">Pembayaran berhasil diproses</string>
    <string name="message_update_stock_invalid">Gagal, tidak dapat mengubah stok produk</string>
    <string name="hint_input_here">Input here...</string>
    <string name="info_total">Total</string>
    <string name="message_success_login">Berhasil Masuk</string>
    <string name="message_failed_login">Gagal Masuk</string>
    <string name="message_success_register">Berhasil Mendaftar</string>
    <string name="message_failed_register">Gagal Mendaftar</string>
    <string name="message_invalid_password_checker">Password tidak sama</string>

</resources>