<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activity.AddAddressActivity">

    <include
        android:id="@+id/header"
        layout="@layout/item_header_checked" />

    <androidx.core.widget.NestedScrollView
        android:layout_below="@id/header"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/input_name"
                android:inputType="text"
                android:singleLine="true"
                android:maxLines="1"
                android:hint="@string/hint_input_name"
                style="@style/InputText" />

            <EditText
                android:layout_marginTop="10dp"
                android:id="@+id/input_phone"
                android:inputType="phone"
                android:singleLine="true"
                android:maxLines="5"
                android:hint="@string/hint_input_phone_number"
                style="@style/InputText" />

            <EditText
                android:layout_marginTop="10dp"
                android:id="@+id/input_postal_code"
                android:inputType="number"
                android:singleLine="true"
                android:maxLines="5"
                android:hint="@string/hint_input_postal_code"
                style="@style/InputText" />

            <EditText
                android:layout_marginTop="10dp"
                android:id="@+id/input_address"
                android:inputType="textMultiLine"
                android:singleLine="true"
                android:maxLines="5"
                android:minLines="5"
                android:hint="@string/hint_input_address"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:gravity="top|start"
                style="@style/InputText" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <TextView
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:id="@+id/button_add"
        android:elevation="0.8dp"
        android:clickable="true"
        android:focusable="true"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:text="@string/button_add_address"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/white"
        android:background="@drawable/selector_button_add_cart" />

</RelativeLayout>