<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".activity.ChangePasswordActivity">

    <include
        android:id="@+id/header"
        layout="@layout/item_header_secondary" />

    <EditText
        android:layout_below="@id/header"
        android:id="@+id/input_confirm_password"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:inputType="textPassword"
        android:hint="@string/hint_confirm_password"
        style="@style/InputText" />

    <EditText
        android:layout_below="@id/input_confirm_password"
        android:id="@+id/input_new_password"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:inputType="textPassword"
        android:hint="@string/hint_new_password"
        style="@style/InputText" />

    <TextView
        android:id="@+id/button_save"
        android:clickable="true"
        android:focusable="true"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/button_change_password"
        android:layout_alignParentBottom="true"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/white"
        android:background="@drawable/selector_button_add_cart" />

</RelativeLayout>